--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
+```json
 {
     "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "app.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "app.py"
+            "source": "/(.*)",
+            "destination": "/app"
         }
     ]
 }
+```
