--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
-```json
 {
-    "version": 2,
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/app"
-        }
-    ]
+  "version": 2
 }
-```
